# mvp-agrgar-contactos

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  ESTRUCTURA.txt  README.md  SETUP_LOCAL.md  docker-compose.yml  main.py  package-lock.json  prd.md  pytest.ini  quickstart.sh  quicktest.py  requirements.txt  run_setup.ps1
config/: __init__.py  (+1 more)
mvp_agente_logistica/: .env.example  .gitignore  LICENSE  PROXIMOS_PASOS.md  PRUEBA_DEMO_RESULTADOS.md  README.md  RESUMEN_IMPLEMENTACION.md  agente-logistica-prd-srs.md  claude-code-agent-prompt.md  config.yaml  ejemplo_uso.py  pyproject.toml  requirements.txt  test_demo.py  test_simple.py
mvp_agente_logistica/.claude/agents/: BackendLogistica.md  logistics-doc-backend-dev.md
mvp_agente_logistica/docs/: architecture.md  usage.md
mvp_agente_logistica/scripts/: setup_env.sh
mvp_agente_logistica/src/: __init__.py  main.py
mvp_agente_logistica/src/core/: __init__.py  config.py  logger.py  pipeline.py
mvp_agente_logistica/src/input/: __init__.py  loader.py  preprocessor.py  validator.py
mvp_agente_logistica/src/llm/: __init__.py  classifier.py  extractor.py  ollama_client.py  prompts.py
mvp_agente_logistica/src/models/: __init__.py  document.py  fields.py  schemas.py
mvp_agente_logistica/src/ocr/: __init__.py  paddle_engine.py  tesseract_engine.py
mvp_agente_logistica/src/output/: __init__.py
mvp_agente_logistica/src/validator/: __init__.py
mvp_agente_logistica/templates/: albaran.yaml  nota_recepcion.yaml  orden_envio.yaml  parte_transporte.yaml
mvp_agente_logistica/tests/: conftest.py  test_models.py
(+23 files in other folders)
